# Tradebot

./: .env.example  .gitignore  CHANGELOG_COUNTERFACTUAL_REFLECTION_LEARNING.md  CHANGELOG_SYSTEM_RESET_PATTERN_LEARNING.md  README.md  STAND.md  Start.bat  TRADEBOT_CODE_REVIEW_VULNERABILITY_ASSESSMENT.txt  ZIEL.md  ZusammenFassung Deepseek.txt  probleme.md  pyproject.toml
.github/workflows/: pages.yml
docs/: app.js  index.html  settings.html  settings.js  styles.css
docs/dashboard/: state.json
scripts/: derive_api_creds.py
tests/: conftest.py  test_adjuster.py  test_backtest.py  test_brain.py  test_brain_torch.py  test_circuit_breaker.py  test_close_missing.py  test_counterfactual.py  test_counterfactual_orchestrator.py  test_dashboard_state.py  test_edge_calc.py  test_execution_style.py  test_features.py  test_hardfail_and_settlement.py  test_hold_analysis.py  test_kelly.py  test_liquidity.py  test_llm_client.py  test_maker_fill.py  test_models.py  test_paper_exchange.py  test_predict_tick_guard.py  test_reddit_oauth.py  test_research_sources.py  test_risk_exec_style.py  test_scan_filters.py  test_social.py  test_source_quality.py  test_store_counterfactual.py  test_ticks.py  test_validation.py  test_wind_down.py
tradebot/: __init__.py  backtest.py  cli.py  config.py  dashboard.py  log.py  models.py  orchestrator.py  server.py  watchdog.py
tradebot/agents/: __init__.py  base.py  brain_manager.py  meta_learner.py  postmortem.py  predict.py  research.py  risk.py  scan.py
tradebot/brain/: __init__.py  counterfactual.py  experience.py  feedback.py  network.py  (+4 more)
(+31 files in other folders)
