[project]
name = "tradebot"
version = "0.1.0"
description = "Multi-agent prediction-market trading bot for Polymarket"
requires-python = ">=3.10"
dependencies = [
  "httpx>=0.27",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "typer>=0.12",
  "rich>=13.7",
  "tenacity>=8.2",
  "python-dotenv>=1.0",
  "numpy>=1.26",
  "anthropic>=0.39",
]

[project.optional-dependencies]
# Heavy ML libs are optional — the bot falls back to a numpy neural net and
# heuristic predictor when they are absent.
ml = ["xgboost>=2.0", "scikit-learn>=1.4", "torch>=2.2"]
# feedparser is optional; rss.py falls back to stdlib XML parsing without it.
news = ["feedparser>=6.0"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[project.scripts]
tradebot = "tradebot.cli:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["tradebot*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
